<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu"
    android:background="@drawable/bandera">

    <TextView
        android:id="@+id/nombreUsuario"
        android:layout_width="271dp"
        android:layout_height="112dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-smallcaps"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <LinearLayout
        android:layout_width="256dp"
        android:layout_height="264dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/ir_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test"
            android:layout_marginBottom="15dp"
            android:textColor="@color/accent"
            android:background="@color/black"
            android:textSize="17dp"
            android:onClick="IrTest"
            ></Button>

        <Button
            android:id="@+id/ir_animales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/animales"
            android:layout_marginBottom="15dp"
            android:textColor="@color/accent"
            android:background="@color/black"
            android:onClick="IrAnimal"
            android:textSize="17dp"
            ></Button>

        <Button
            android:id="@+id/ir_audio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pronunciación"
            android:layout_marginBottom="15dp"
            android:textColor="@color/accent"
            android:background="@color/black"
            android:onClick="IrPronun"
            android:textSize="17dp"
            ></Button>

        <Button
            android:id="@+id/salir_aplicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salir"
            android:textColor="@color/accent"
            android:background="@color/black"
            android:textSize="17dp"
            android:onClick="CerrarAplic"
            ></Button>

    </LinearLayout>


</FrameLayout>